# modman

./: Cargo.toml  README.md  TODO  test.sh
.github/workflows/: ci.yml
src/: activate.rs  add.rs  check.rs  deactivate.rs  dir_mod.rs  encoding.rs  error.rs  file_utils.rs  hash_serde.rs  init.rs  journal.rs  list.rs  main.rs  modification.rs  profile.rs  remove.rs  repair.rs  update.rs  usage.rs  version_serde.rs  zip_mod.rs
test/: .gitignore
test/expected/: check.warns  empty.backup  empty.profile  list.txt  mod1.backup  mod1.profile  mod1.root  mod2.profile  mod2.root  starting.root  updated.backup  updated.root
test/mod-conflicting/: README.txt
test/mod-conflicting/rootdir/: A.txt
test/mod1/: README.txt
test/mod1/modroot/: A.txt  B.txt  C.txt
test/mod1/modroot/newdir/: N.txt
test/mod2/: README.txt  VERSION.txt
test/mod2/mod2/newdir/newsubdir/: A.txt  B.txt
test/rootdir/: A.txt  B.txt
