[package]
name = "modman"
version = "0.3.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
anyhow= "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.9"
sha2 = "0.9"
semver = "0.9"
log = "0.4"
atty = "0.2"
stderrlog = "0.4"
hex = "0.4"
memmap = "0.7"
rayon = "1.0"
